--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,14 @@ body {
     max-height: 500px;
     border-style: solid;
     border-color: darkslategrey;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 100px);
+    grid-template-columns: repeat(3, .25fr);
+    grid-template-rows: repeat(4, .25fr);
     grid-row-gap: 3px;
     grid-column-gap: 3px;
     margin: auto;
     padding: 10px;
     position: relative;
+    
 }
 
 .grid-container > div {
@@ -25,6 +26,13 @@ body {
     border-width: 2px;
     border-color: darkslategrey;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;    
     justify-content: center;
 }
+
+.display {
+  grid-column-start: 1;
+  grid-column-end: end;
+} 
+
