--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     
 }
 
-.grid-container > div {
+.grid-container > button {
     background-color: rgb(161, 226, 205);
     border-style: solid;
     border-width: 2px;
@@ -32,7 +32,11 @@ body {
 }
 
 .display {
-  grid-column-start: 1;
-  grid-column-end: end;
+    grid-column-start: 1;
+    grid-column-end: end;
+    border-style: solid;
+    border-color: darkslategrey;
+    border-width: 2px;
+    background-color: rgb(206, 233, 224);
 } 
 
